--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -858,10 +858,12 @@ jobs:
       uses: actions/download-artifact@v5
       with:
         name: ionosphereTests
+    - name: Set up Python
+      uses: actions/setup-python@v3
     - name: checkout Analysator
       run: |
-        apt update
-        apt -y install python3 gnuplot-nox
+        sudo apt-get update --allow-releaseinfo-change
+        sudo apt-get -y install gnuplot-nox
         cd mini-apps/ionosphereSolverTests/
         git clone https://github.com/fmihpc/analysator
         export TMPDIR=$RUNNER_TEMP
