Testing optional asterix features

--- a/MAKE/Makefile.lumi_2403
+++ b/MAKE/Makefile.lumi_2403
@@ -41,6 +41,9 @@ testpackage: MATHFLAGS = -fno-unsafe-math-optimizations
 LDFLAGS = -lrt -fopenmp -L$(LIBRARY_PREFIX)/lib  -Wl,-rpath=$(LIBRARY_PREFIX)/lib
 LIB_MPI = -fopenmp
 
+#Asterix methods (-DASTERIX_ZFP -DASTERIX_OCTREE -DASTERIX_MLP)
+CXXFLAGS += -DASTERIX_ZFP -DASTERIX_OCTREE
+
 #======== PAPI ==========
 #Add PAPI_MEM define to use papi to report memory consumption?
 CXXFLAGS +=  -DPAPI_MEM
@@ -70,4 +73,7 @@ LIB_VLSV = -lvlsv
 
 INC_PROFILE = -I$(LIBRARY_PREFIX)/include 
 LIB_PROFILE = -L$(LIBRARY_PREFIX)/lib -lphiprof -Wl,-rpath=$(LIBRARY_PREFIX)/lib
-#LIB_PROFILE = -lphiprof -lgfortran
+
+#ASTERIX
+LIB_ZFP = -lzfp
+LIB_OCTREE_COMPRESSOR = -L$(LIBRARY_PREFIX)/lib64  -Wl,-rpath=$(LIBRARY_PREFIX)/lib64  -ltoctree_compressor
